# pm-agent

./: CLAUDE.md  docker-compose.yml
agent/: .env  .env.example  main.py  pyproject.toml  run.py  stream.py
agent/app/: schemas.py
agent/app/api/: __init__.py  documents.py  intelligence.py  knowledge.py  meetings.py  roadmap.py  run.py  standups.py  stream.py
agent/app/config/: __init__.py  settings.py
agent/app/graph/: __init__.py  builder.py  deep_builder.py  services.py  state.py  thinking_builder.py  thinking_deep_builder.py  unified_builder.py
agent/app/graph/nodes/: common.py  fetch_context.py  generate_answer.py  load_user.py  parse_intent.py  persist.py  retrieve_docs.py  search_memories.py  store_memories.py  synthesize_report.py  web_research.py
agent/app/observability/: __init__.py  events.py
agent/app/pipelines/: __init__.py  document_processor.py  knowledge_extractor.py  meeting_processor.py  risk_detector.py  stakeholder_reporter.py  standup_processor.py
agent/app/tools/: __init__.py  app_api_client.py  doc_retriever.py  embedding_client.py  integration_client.py  llm_client.py  memory_client.py  minio_client.py  resilience.py  tavily_client.py
agent/app/tools/llm/: __init__.py  base.py  factory.py  groq_provider.py
api/: .env.example  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
integration-service/: .env.example  README.md  insomnia.collection.json  package-lock.json  package.json
ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+266 files in other folders)
